#7 Profile Image Upload

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,3 +6,34 @@ body {
     width: 60%;
     margin : 50px auto;
 }
+
+.thumbnail-box {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 30px auto 10px;
+    cursor: pointer;
+}
+
+.thumbnail-box img {
+    width: 100px;
+    height: 100px;
+}
+
+.signup-img-label {
+    font-weight: bold;
+    font-size: 17px;
+    color: #0095f6;
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.welcome-profile {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-left: 20px;
+}
